[tool.poetry]
name = "mudder"
version = "0.2.0"
description = "Python port of mudderjs"
readme = "README.md"
authors = ["Patrick Gingras <775.pg.12@gmail.com>"]
license = "BSD-3-Clause"
homepage = "https://github.com/fellowinsights/mudder-py"
repository = "https://github.com/fellowinsights/mudder-py"

[tool.poetry.dependencies]
python = ">=3.8.1,<4"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.4"
pytest = "^7.2.1"
flake8 = "^6.0.0"
flake8-bugbear = "^23.1.20"

[tool.black]
max-line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
