[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "mudder"
dynamic = ["version"]
description = "Python port of mudderjs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Patrick Gingras", email = "775.pg.12@gmail.com" }]
license = { text = "BSD-3-Clause" }

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/fellowapp/mudder-py"
Repository = "https://github.com/fellowapp/mudder-py"
Changelog = "https://github.com/fellowapp/mudder-py/releases"

[dependency-groups]
dev = ["pyright>=1.1.396", "pytest~=8.1", "ruff~=0.4"]

[tool.setuptools_scm]

[tool.ruff.lint]
select = [
    "ANN",
    "B",
    "COM",
    "E",
    "EM",
    "F",
    "I",
    "I",
    "N",
    "PT",
    "RSE",
    "RUF",
    "SIM",
    "UP",
    "W",
]
ignore = ["COM812"]
preview = true

[tool.ruff.format]
preview = true
